--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0" rel="stylesheet" />
 <style>
 :root{
-  --ink:#1c1410;--ink-mid:#3d3028;--ink-soft:#7a6a5a;--ink-ghost:#b0a090;
-  --paper:#f5f0e8;--paper-warm:#ede6db;--card:#fffefb;
-  --sb:#fefcf7;--sb-bdr:#e2d8cc;--sb-lbl:#b8a898;--sb-link:#6b5e50;--sb-hover:#f5ede0;--sb-active:#fff3e0;
-  --green:#0b7060;--green-bg:#edf7f3;--green-bdr:rgba(11,112,96,.22);
+  --ink:#0d2137;--ink-mid:#1e3a5a;--ink-soft:#4a6a8a;--ink-ghost:#90aec8;
+  --paper:#eef5fd;--paper-warm:#e2eefa;--card:#ffffff;
+  --sb:#ffffff;--sb-bdr:#c8ddf0;--sb-lbl:#90aac5;--sb-link:#4a6a8a;--sb-hover:#eff6ff;--sb-active:#deeeff;
+  --accent:#1a6bbf;--accent-bg:#deeeff;--accent-bdr:rgba(26,107,191,.25);
+  --green:#0b7060;--green-bg:#e8f7f3;--green-bdr:rgba(11,112,96,.22);
   --amber:#a86008;--amber-bg:#fff8ed;--amber-bdr:rgba(168,96,8,.22);
-  --red:#a82818;--red-bg:#fdf0ee;--red-bdr:rgba(168,40,24,.22);
-  --blue:#1a3d6e;--blue-bg:#eef2fb;
-  --bdr:rgba(100,80,60,.10);--shadow:0 2px 18px rgba(100,80,60,.08);
+  --red:#b02020;--red-bg:#fdeeed;--red-bdr:rgba(176,32,32,.22);
+  --bdr:rgba(26,107,191,.10);--shadow:0 2px 18px rgba(26,80,150,.08);
 }
 *,*::before,*::after{box-sizing:border-box;margin:0;padding:0;}
 html,body{height:100%;overflow:hidden;}
@@ -29,7 +29,7 @@ a{color:inherit;text-decoration:none;}
 .sb{width:218px;min-width:218px;background:var(--sb);border-right:1px solid var(--sb-bdr);display:flex;flex-direction:column;flex-shrink:0;}
 .sb-brand{padding:22px 20px 16px;border-bottom:1px solid var(--sb-bdr);}
 .sb-logo{display:flex;align-items:center;gap:9px;margin-bottom:2px;}
-.sb-dot{width:8px;height:8px;border-radius:50%;background:var(--amber);opacity:.9;}
+.sb-dot{width:8px;height:8px;border-radius:50%;background:var(--accent);opacity:.9;}
 .sb-school{font-family:'DM Serif Display',serif;color:var(--ink);font-size:14.5px;line-height:1.25;}
 .sb-role{font-size:9px;color:var(--sb-lbl);text-transform:uppercase;letter-spacing:.15em;margin-top:5px;}
 .sb-nav{flex:1;overflow-y:auto;padding:8px 0;scrollbar-width:none;}
@@ -40,12 +40,12 @@ a{color:inherit;text-decoration:none;}
 .sb-nav li{margin-bottom:1px;}
 .sb-nav a{display:flex;align-items:center;gap:10px;padding:8px 18px;font-size:13px;color:var(--sb-link);border-left:3px solid transparent;transition:all .14s;border-radius:0 8px 8px 0;margin-right:8px;}
 .sb-nav a:hover{color:var(--ink);background:var(--sb-hover);}
-.sb-nav li.active a{color:var(--amber);background:var(--sb-active);border-left-color:var(--amber);font-weight:600;}
+.sb-nav li.active a{color:var(--accent);background:var(--sb-active);border-left-color:var(--accent);font-weight:600;}
 .mi{font-family:'Material Symbols Outlined';font-size:16px;opacity:.55;font-style:normal;line-height:1;}
-.sb-nav li.active a .mi{opacity:.8;color:var(--amber);}
+.sb-nav li.active a .mi{opacity:.85;color:var(--accent);}
 .sb-foot{padding:13px 20px;border-top:1px solid var(--sb-bdr);}
 .av{display:flex;align-items:center;gap:10px;}
-.av-ring{width:32px;height:32px;border-radius:50%;background:var(--amber-bg);border:1px solid var(--amber-bdr);display:flex;align-items:center;justify-content:center;font-size:11px;font-weight:700;color:var(--amber);flex-shrink:0;}
+.av-ring{width:32px;height:32px;border-radius:50%;background:var(--accent-bg);border:1px solid var(--accent-bdr);display:flex;align-items:center;justify-content:center;font-size:11px;font-weight:700;color:var(--accent);flex-shrink:0;}
 .av-name{font-size:12px;font-weight:600;color:var(--ink);}
 .av-role{font-size:10px;color:var(--sb-lbl);margin-top:1px;}
 
@@ -56,11 +56,11 @@ a{color:inherit;text-decoration:none;}
 .topbar{background:var(--sb);border-bottom:1px solid var(--sb-bdr);padding:0 28px;height:62px;display:flex;align-items:center;justify-content:space-between;flex-shrink:0;}
 .tb-left{display:flex;flex-direction:column;justify-content:center;}
 .tb-greeting{font-family:'DM Serif Display',serif;font-size:19px;color:var(--ink);letter-spacing:-.025em;line-height:1;}
-.tb-greeting em{font-style:italic;color:var(--amber);}
+.tb-greeting em{font-style:italic;color:var(--accent);}
 .tb-date{font-size:11px;color:var(--ink-ghost);margin-top:3px;}
 .tb-right{display:flex;align-items:center;gap:8px;}
 .chip{display:inline-flex;align-items:center;gap:5px;font-size:11.5px;font-weight:500;padding:5px 14px;border-radius:20px;border:1px solid var(--sb-bdr);color:var(--sb-link);background:var(--paper);white-space:nowrap;cursor:pointer;transition:all .13s;}
-.chip:hover{background:var(--paper-warm);color:var(--ink);}
+.chip:hover{background:var(--accent-bg);color:var(--accent);border-color:var(--accent-bdr);}
 .chip .mi{font-size:14px;opacity:.7;}
 .chip.urgent{background:var(--red-bg);border-color:var(--red-bdr);color:var(--red);}
 
@@ -84,10 +84,10 @@ a{color:inherit;text-decoration:none;}
 .sec-hdr{display:flex;align-items:center;gap:12px;margin-bottom:14px;margin-top:4px;}
 .sec-hdr+.sec-hdr,.kpi-grid+.sec-hdr{margin-top:30px;}
 .sec-icon{width:38px;height:38px;border-radius:10px;display:flex;align-items:center;justify-content:center;font-size:18px;flex-shrink:0;}
-.sec-icon.enrol{background:#e8f4f0;border:1px solid #c8e8e0;}
-.sec-icon.people{background:#e8eef8;border:1px solid #c8d8f0;}
-.sec-icon.finance{background:#fdf3e0;border:1px solid #f0d8a8;}
-.sec-icon.perf{background:#f0ebf8;border:1px solid #dcd0f0;}
+.sec-icon.enrol{background:#e2f4f0;border:1px solid #b8e0d8;}
+.sec-icon.people{background:#deeeff;border:1px solid #b8d8f4;}
+.sec-icon.finance{background:#fef4e2;border:1px solid #f0dcb0;}
+.sec-icon.perf{background:#eee8fc;border:1px solid #d4c8f4;}
 .sec-title{font-family:'DM Serif Display',serif;font-size:20px;color:var(--ink);letter-spacing:-.02em;}
 .sec-sub{font-size:11.5px;color:var(--ink-ghost);margin-top:1px;}
 .sec-right{margin-left:auto;display:flex;align-items:center;gap:8px;}
@@ -164,6 +164,7 @@ a{color:inherit;text-decoration:none;}
 .kc.g .kc-toggle:hover{color:var(--green);}
 .kc.a .kc-toggle:hover{color:var(--amber);}
 .kc.r .kc-toggle:hover{color:var(--red);}
+.kc-toggle:focus{outline:2px solid var(--accent-bg);border-radius:4px;}
 
 /* ── RESPONSIVE ── */
 @media(max-width:1280px){.kpi-grid{grid-template-columns:repeat(3,1fr);}}
