--- a/principal-datastory.html
+++ b/principal-datastory.html
@@ -7,31 +7,33 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400;1,600&family=Source+Serif+4:ital,wght@0,300;0,400;0,600;1,400&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 <style>
   :root {
-    --black:#0a0a0a; --charcoal:#1c1c1c; --dark:#2e2e2e; --mid:#5c5c5c; --soft:#8a8a8a;
-    --rule:#d0cac0; --paper:#f8f4ee; --warm-white:#fdfaf5; --ink-cream:#e8e2d6;
-    --red:#c0392b; --teal:#0d7a6e; --amber:#b8680a; --blue:#1a4a7a;
+    --black:#0d2137; --charcoal:#1e3a5a; --dark:#2d4a6a; --mid:#4a6a8a; --soft:#90aac5;
+    --rule:#c8ddf0; --paper:#eef5fd; --warm-white:#f5f9ff; --ink-cream:#d8eaf8;
+    --red:#b02020; --teal:#0d7a6e; --amber:#a86008; --blue:#1a6bbf;
+    --accent:#1a6bbf;
   }
   *{box-sizing:border-box;margin:0;padding:0;}
   html{font-size:16px;}
   body{background:var(--paper);color:var(--black);font-family:'Source Serif 4',serif;max-width:960px;margin:0 auto;padding:40px 32px;animation:fadeIn .5s ease;}
+  a{color:inherit;text-decoration:none;}
   @keyframes fadeIn{from{opacity:0;}to{opacity:1;}}
 
   /* NAV BAR */
   .nav-bar{display:flex;align-items:center;justify-content:space-between;padding:10px 0 18px;border-bottom:1px solid var(--rule);margin-bottom:6px;}
   .nav-bar a{font-family:'JetBrains Mono',monospace;font-size:9px;letter-spacing:.12em;text-transform:uppercase;color:var(--soft);text-decoration:none;padding:4px 10px;border:1px solid var(--rule);}
-  .nav-bar a:hover{background:var(--ink-cream);}
-  .nav-bar a.active{background:var(--black);color:#fff;border-color:var(--black);}
+  .nav-bar a:hover{background:var(--ink-cream);color:var(--black);}
+  .nav-bar a.active{background:var(--accent);color:#fff;border-color:var(--accent);}
   .nav-center{font-family:'JetBrains Mono',monospace;font-size:9px;color:var(--mid);letter-spacing:.1em;}
 
   /* MASTHEAD */
-  .masthead{text-align:center;border-top:4px solid var(--black);border-bottom:1px solid var(--black);padding:20px 0 16px;margin-bottom:8px;}
+  .masthead{text-align:center;border-top:4px solid var(--accent);border-bottom:1px solid var(--rule);padding:20px 0 16px;margin-bottom:8px;}
   .masthead-kicker{font-family:'JetBrains Mono',monospace;font-size:9px;letter-spacing:.18em;text-transform:uppercase;color:var(--mid);margin-bottom:10px;}
   .masthead-title{font-family:'Playfair Display',serif;font-size:44px;font-weight:700;letter-spacing:-.02em;line-height:1;color:var(--black);}
-  .masthead-title em{font-style:italic;color:var(--mid);font-weight:400;}
+  .masthead-title em{font-style:italic;color:var(--accent);font-weight:400;}
   .masthead-meta{display:flex;justify-content:space-between;margin-top:12px;padding-top:10px;border-top:1px solid var(--rule);font-family:'JetBrains Mono',monospace;font-size:9px;color:var(--soft);letter-spacing:.08em;}
 
   /* SECTION RULE */
-  .section-rule{border:none;border-top:2px solid var(--black);margin:24px 0 20px;}
+  .section-rule{border:none;border-top:2px solid var(--accent);margin:24px 0 20px;}
   .section-rule.thin{border-width:1px;border-color:var(--rule);}
   .section-label{font-family:'JetBrains Mono',monospace;font-size:9px;letter-spacing:.16em;text-transform:uppercase;color:var(--mid);margin-bottom:16px;display:flex;align-items:center;gap:12px;}
   .section-label::after{content:'';flex:1;height:1px;background:var(--rule);}
@@ -80,14 +82,14 @@
   .col-body{font-size:12px;line-height:1.65;color:var(--charcoal);}
 
   /* PULL QUOTE */
-  .pull-quote{border-left:4px solid var(--black);padding:12px 20px;margin:16px 0;background:var(--warm-white);}
+  .pull-quote{border-left:4px solid var(--accent);padding:12px 20px;margin:16px 0;background:var(--warm-white);border-radius:0 6px 6px 0;}
   .pull-quote p{font-family:'Playfair Display',serif;font-size:18px;font-style:italic;line-height:1.4;color:var(--black);}
   .pull-quote cite{font-size:11px;color:var(--soft);font-style:normal;font-family:'JetBrains Mono',monospace;letter-spacing:.06em;display:block;margin-top:8px;}
 
   /* ACTION ITEMS */
   .actions-grid{display:grid;grid-template-columns:1fr 1fr;gap:16px;margin-bottom:24px;}
   .action-story{display:flex;gap:14px;padding:16px;border:1px solid var(--rule);background:var(--warm-white);}
-  .action-num{font-family:'Playfair Display',serif;font-size:32px;font-weight:700;color:var(--ink-cream);line-height:1;flex-shrink:0;width:32px;}
+  .action-num{font-family:'Playfair Display',serif;font-size:32px;font-weight:700;color:#b8d8f4;line-height:1;flex-shrink:0;width:32px;}
   .action-hl{font-family:'Playfair Display',serif;font-size:14px;font-weight:600;margin-bottom:4px;line-height:1.3;}
   .action-body{font-size:12px;color:var(--charcoal);line-height:1.6;}
   .action-tag{display:inline-block;margin-top:6px;font-family:'JetBrains Mono',monospace;font-size:9px;letter-spacing:.1em;text-transform:uppercase;padding:2px 6px;border:1px solid currentColor;}
